Apñicación web basada en Razor Pages, PostgreSQL, Npgsql, Dapper, bootstrap 4, JavaScript y JQuery. Muestra como usar web apis(con soprte para GET y POST), así como  Ajax

--- a/PgsqlDapperRazor/Pages/_Layout.cshtml
+++ b/PgsqlDapperRazor/Pages/_Layout.cshtml
@@ -37,6 +37,9 @@
                     <li class="nav-item" id="opc3">
                         <a class="nav-link" href="/Clientes">Clientes</a>
                     </li>
+                    <li class="nav-item" id="opc3">
+                        <a class="nav-link" href="/Productos">Productos</a>
+                    </li>
                     <li class="nav-item" id="opc4">
                         <a class="nav-link" href="/Contacto">Contacto</a>
                     </li>
