--- a/PgsqlDapperRazor/Pages/Empleados.cshtml
+++ b/PgsqlDapperRazor/Pages/Empleados.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="text-center">
-        <h3 class="display-5">Tabla de empleados</h3>
+        <h3 class="display-5">Lista de empleados</h3>
 
         <table class="table" id="tablaEmpleados">
             <thead class="thead-dark">
